APB-8 Admin, page SERVER LOGS filesearch with fileselect, settings enabled log variables visible, buggfixes reading logfiles, logfiles saved with leading 0 for month and day.

--- a/apps/admin/src/secure/admin.css
+++ b/apps/admin/src/secure/admin.css
@@ -46,8 +46,12 @@
     #dialogue_send_broadcast_content{
         height:320px;
     }
-    #dialogue_lov{
+    #dialogue_lov_content{
         height:300px;
+    }
+    #lov_list{
+        overflow-y: auto;
+        height: 230px;
     }
     #select_app_broadcast{
         width:50%;
@@ -590,6 +594,9 @@
         height:500px;
         width:100%;
     }
+    #menu4_row_parameters div{
+        display: inline-block;
+    }
     #list_server_log_title{
         text-transform: uppercase;
         display:inline-block;
@@ -733,7 +740,6 @@
     .theme_light .list_app_parameter_row input{
         font-size: 9px;
     }
-
     .theme_light #list_apps,
     .theme_light #list_app_parameter{
         background-color: rgb(197 227 255);
@@ -778,6 +784,24 @@
         font-size: 20px;
         background-color: #fefefe;
     }    
+    #menu4_row_parameters div{
+        font-size: 11px;
+    }
+    #filesearch_menu4{
+        font-size: 16px;
+    }
+    #menu4_row_parameters_col1_1,
+    #menu4_row_parameters_col2_1,
+    #menu4_row_parameters_col3_1,
+    #menu4_row_parameters_col4_1{
+        color:#6ab344;
+    }
+    #menu4_row_parameters_col1_0,
+    #menu4_row_parameters_col2_0,
+    #menu4_row_parameters_col3_0,
+    #menu4_row_parameters_col4_0{
+        color:#d82139;
+    }
     .theme_light .dialogue{
         background-color: rgba(0,0,0,0.4);
     }
